workloads/attyxy/titanic.deploy.yaml
---

apiVersion: apps/v1beta1
kind: Deployment

metadata:
  name: titanic
  namespace: attyxy
  labels:
    app: titanic
  annotations:
    fluxcd.io/automated: "true"
    filter.fluxcd.io/app: regexp:^3(\.[0-9]+){2} # 3.x.x...

spec:
  selector:
    matchLabels:
      app: titanic
  template:
    metadata:
      labels:
        app: titanic
    spec:
      containers:
      - name: app
        image: attyxy/titanic-app:3.0.2
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8000
        readinessProbe: &probe
          httpGet:
            path: /
            port: 8000
        livenessProbe: *probe
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 500m
            memory: 500Mi
