workloads/attyxy/titanic.svc.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: titanic
  namespace: attyxy
  labels:
    app: titanic

spec:
  selector:
    app: titanic
  ports:
    - name: http
      port: 8000
      targetPort: http

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: titanic
  namespace: attyxy
  labels:
    app: titanic

spec:
  gateways: ["primary"]
  hosts: ["api.attyxy.me"]
  http:
    - match:
        - uri:
            exact: /titanic
      redirect:
        uri: /titanic/

    - match:
        - uri:
            prefix: /titanic/
      rewrite:
        uri: /
      route:
        - destination:
            host: titanic
            port:
              number: 8000
          headers:
            response:
              set:
                X-Service: titanic
      corsPolicy:
        allowOrigin: ["*"]
        allowHeaders: ["Content-Type"]
        allowMethods: ["POST", "PATCH", "PUT"]
